2006-01-31  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (cwdstuff::set): Don't set win32 error, only POSIX errno.

2006-01-31  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (cwdstuff::set): When SetCurrentDirectory returns
	ERROR_INVALID_FUNCTION, bend it over to ERROR_FILE_NOT_FOUND.  Add
	comment to explain why.

2006-01-31  Corinna Vinschen  <corinna@vinschen.de>

	* dir.cc (readdir_worker): Add comment about writing old 32 bit d_ino.
	* include/cygwin/version.h: Bump API minor number to 152.
	(CYGWIN_VERSION_CHECK_FOR_NEEDS_D_INO): Remove.

2006-01-30  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_disk_file.cc (fhandler_disk_file::rewinddir): Simplify
	conditional.

2006-01-30  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_disk_file.cc (d_cachepos): Rename from d_pos to distinct
	clearly from __d_position.  Change throughout.
	(fhandler_disk_file::rewinddir): Reset readdir cache on NT.

2006-01-29  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_disk_file.cc (readdir_get_ino): Don't follow symlinks.

2006-01-29  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.h (class fhandler_socket): Add saw_reuseaddr status flag.
	* fhandler_socket.cc (fhandler_socket::bind): Set socket to
	SO_EXCLUSIVEADDRUSE if application didn't explicitely set SO_REUSEADDR
	socket option, on systems supporting SO_EXCLUSIVEADDRUSE.
	* net.cc (cygwin_setsockopt): Set fhandler's saw_reuseaddr status flag
	if SO_REUSEADDR socket option has been successsfully set.
	* wincap.h (wincaps::has_exclusiveaddruse): New element.
	* wincap.cc: Implement above element throughout.

2006-01-28  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_disk_file.cc (fhandler_disk_file::mkdir): In case or error,
	check for existance explicitely and set errno to EEXIST.

2006-01-28  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_disk_file.cc (DIR_NUM_ENTRIES): New define determining
	minimum number of dir entries which fit into the readdir cache.